test_files/errors/Syntax_Error.txt
Syntax error at line 28 in class APPLICATION

            print(c.out)[
        end
--------^


-------------------------------------------------------------------------------